Finish connections for unhandled exceptions
When an exception that is otherwise not retried occurs
net-http-persistent did not finish the connection.  This could leave
the server response outstanding on the connection resulting in the
response for a pre-exception request A being delivered to a
post-exception request B.

Issue #46

--- a/History.txt
+++ b/History.txt
@@ -10,6 +10,8 @@
     method.  Issue #35 by André Arko.
   * Handle Errno::ETIMEDOUT by retrying the request.  Issue #36 by André Arko.
   * Requests retried by ruby 2.x are no longer retried by net-http-persistent.
+  * Finish the connection if an otherwise unhandled exception happens during a
+    request.  Bug #46 by Mark Oude Veldhuis.
 
 === 2.8 / 2012-10-17
 
